# devin-hdg-portal

./: .env.template  README-Azure.md  README.md  deploy-azure-infrastructure.sh  deploy-frontend.sh  deploy-functions.sh  openapi.yaml  package-lock.json  package.json  test-azure-functions.sh
.github/workflows/: deploy-frontend.yml  deploy-functions.yml  deploy-infrastructure.yml
azure-deploy/: README.md  cleanup.sh  deploy.sh
azure-functions/: function_app.py  local.settings.json.template  requirements.txt
document-intelligence-backend/: .env.example  pyproject.toml
document-intelligence-backend/app/: config.py  main.py  models.py  services.py
document-intelligence-frontend/: .env  .env.template  index.html  package-lock.json  package.json
document-intelligence-frontend/src/: App.tsx
document-intelligence-frontend/src/components/layout/: Header.tsx  MainContent.tsx  Sidebar.tsx
document-intelligence-frontend/src/components/modules/: Analytics.tsx  Audit.tsx  Configuration.tsx  Dashboard.tsx  Ingestion.tsx  ProcessedDocuments.tsx  SchemaConfiguration.tsx  Users.tsx
document-intelligence-frontend/src/hooks/: use-toast.ts
document-intelligence-frontend/src/lib/: api.ts
document-intelligence-frontend/src/services/: api.ts
functions/: activities.py  entities.py  function_app.py  host.json  local.settings.json  orchestrators.py  requirements.txt
functions/tests/: test_function_app.py
infra/: api-management.tf  cognitive-services.tf  cosmos-db.tf  function-app.tf  key-vault.tf  main.tf  outputs.tf  rbac.tf  resource-group.tf  storage.tf
(+1 files in other folders)
